tests/baselines/reference/structInitializerReferencingConstructorLocals_basic.errors.txt
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberVariableDeclarations_basic/structInitializerReferencingConstructorLocals_basic.ts(7,15): error TS1003: Identifier expected.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberVariableDeclarations_basic/structInitializerReferencingConstructorLocals_basic.ts(17,15): error TS1003: Identifier expected.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberVariableDeclarations_basic/structInitializerReferencingConstructorLocals_basic.ts(4,9): error TS2304: Cannot find name 'z'.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberVariableDeclarations_basic/structInitializerReferencingConstructorLocals_basic.ts(5,15): error TS2304: Cannot find name 'z'.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberVariableDeclarations_basic/structInitializerReferencingConstructorLocals_basic.ts(6,14): error TS2339: Property 'z' does not exist on type 'C'.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberVariableDeclarations_basic/structInitializerReferencingConstructorLocals_basic.ts(7,20): error TS2339: Property 'z' does not exist on type 'C'.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberVariableDeclarations_basic/structInitializerReferencingConstructorLocals_basic.ts(9,9): error TS2304: Cannot find name 'z'.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberVariableDeclarations_basic/structInitializerReferencingConstructorLocals_basic.ts(14,9): error TS2304: Cannot find name 'z'.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberVariableDeclarations_basic/structInitializerReferencingConstructorLocals_basic.ts(15,15): error TS2304: Cannot find name 'z'.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberVariableDeclarations_basic/structInitializerReferencingConstructorLocals_basic.ts(16,14): error TS2339: Property 'z' does not exist on type 'D<T>'.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberVariableDeclarations_basic/structInitializerReferencingConstructorLocals_basic.ts(17,20): error TS2339: Property 'z' does not exist on type 'D<T>'.
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberVariableDeclarations_basic/structInitializerReferencingConstructorLocals_basic.ts(19,9): error TS2304: Cannot find name 'z'.


==== tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberVariableDeclarations_basic/structInitializerReferencingConstructorLocals_basic.ts (12 errors) ====
    // Initializer expressions for instance member variables are evaluated in the scope of the struct constructor body but are not permitted to reference parameters or local variables of the constructor. 
    
    struct C {
        a = z; // error
            ~
!!! error TS2304: Cannot find name 'z'.
        b: typeof z; // error
                  ~
!!! error TS2304: Cannot find name 'z'.
        c = this.z; // error
                 ~
!!! error TS2339: Property 'z' does not exist on type 'C'.
        d: typeof this.z; // error
                  ~~~~
!!! error TS1003: Identifier expected.
                       ~
!!! error TS2339: Property 'z' does not exist on type 'C'.
        constructor(x) {
            z = 1;
            ~
!!! error TS2304: Cannot find name 'z'.
        }
    }
    
    struct D<T> {
        a = z; // error
            ~
!!! error TS2304: Cannot find name 'z'.
        b: typeof z; // error
                  ~
!!! error TS2304: Cannot find name 'z'.
        c = this.z; // error
                 ~
!!! error TS2339: Property 'z' does not exist on type 'D<T>'.
        d: typeof this.z; // error
                  ~~~~
!!! error TS1003: Identifier expected.
                       ~
!!! error TS2339: Property 'z' does not exist on type 'D<T>'.
        constructor(x: T) {
            z = 1;
            ~
!!! error TS2304: Cannot find name 'z'.
        }
    }